print canvas, empezando a gestionar puntos

--- a/src/pages/user/jugar.html
+++ b/src/pages/user/jugar.html
@@ -1,1 +1,20 @@
-<h1>jugar</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+</head>
+
+<body>
+    <a href="../../index.html">Login</a>
+    <a href="jugar.html">Jugar</a>
+    <a href="llistat.html">Llistat patrides</a>
+    <br>
+    <form id="nomForm" method="POST">
+        <label>Nom del jugador:</label>
+        <input type="text" id="jugador" name="jugador">
+        <button type="submit">Juga</button>
+    </form>
+    <script src="../../js/user/jugar.js"></script>
+</body>
+
+</html>
