--- a/src/pages/user/joc.html
+++ b/src/pages/user/joc.html
@@ -13,23 +13,23 @@
         <div class="infodiv">
             <div class="textdiv">
                 <label>Paraula:</label>
-                <p id="paraula" class="text">Ordinador</p>   
+                <p id="paraula" class="text"> </p>   
             </div>
             <div class="textdiv">
                 <label>Lletres correctes:</label>
-                <p class="text">Ordinador</p>   
+                <p id="correcte" class="text">0</p>   
             </div>
             <div class="textdiv">
                 <label>Lletres erronies:</label>
-                <p class="text">Ordinador</p>   
+                <p id="error" class="text">0</p>   
             </div>
             <div class="textdiv">
                 <label>Paraules encertades:</label>
-                <p class="text">Ordinador</p>   
+                <p id="encertades" class="text">0</p>   
             </div>
             <div class="textdiv">
                 <label>Punts:</label>
-                <p class="text">Ordinador</p>   
+                <p id="punts" class="text">0</p>   
             </div>
             <div class="textdiv">
                 <label>Temps:</label>
@@ -40,9 +40,11 @@
             <canvas height="300px" width="300px"></canvas>
         </div>
         <div class="imagediv">
-            
+            <h1 id="lletra" class="text"></h1>   
+            <img id="foto" src="">
         </div>
     </div>
+    <button id="renovarBtn">Renovar</button>
 </body>
 
 </html>
