--- a/src/pages/admin/menu.html
+++ b/src/pages/admin/menu.html
@@ -5,8 +5,8 @@
 <body>
     <ul>
         <li><a href="../../index.html">Login</a></li>
-        <li><a href="jugar.html">Jugar</a></li>
-        <li><a href="llistat.html">Llistat patrides</a></li>
+        <li><a href="../user/jugar.html">Jugar</a></li>
+        <li><a href="../user/llistat.html">Llistat patrides</a></li>
         <li><a href="../admin/gestionar.html">Gestionar paraules</a></li>
         <li><a href="../admin/configuracio.html">Configuració</a></li>
     </ul>
