--- a/src/pages/user/joc.html
+++ b/src/pages/user/joc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <script src="../../js/user/joc.js"></script>
+    <script type="module" src="../../js/user/joc.js"></script>
   <link rel="stylesheet" href="../css/joc.css">
 <head>
 </head>
