--- a/src/pages/user/llistat.html
+++ b/src/pages/user/llistat.html
@@ -1,1 +1,38 @@
-<h1>llista</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Tabla de Registros</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      border: 1px solid black;
+      padding: 8px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+  </style>
+</head>
+<body>
+  <h1>Tabla de Registros</h1>
+  <table id="tabla-registros">
+    <tr>
+      <th>Usuario</th>
+      <th>Palabra</th>
+      <th>Traducción</th>
+      <th>Tiempo</th>
+      <th>Correctas</th>
+      <th>Errores</th>
+      <th>Puntos</th>
+    </tr>
+  </table>
+
+  <script src="../../js/user/llistat.js"></script>
+</body>
+</html>
