--- a/src/pages/admin/configuracio.html
+++ b/src/pages/admin/configuracio.html
@@ -40,6 +40,9 @@
     <input type="radio" name="opcion3" value="minuscules_majuscules"> Minuscules i Majuscules
   </label>
   <br>
+
+  <label for="idiomaSelect">Idioma:</label>
+  <select id="idiomaSelect"></select>
   
   <button onclick="guardarConfiguracion()">Guardar</button>
   </body>
