--- a/src/pages/admin/menu.html
+++ b/src/pages/admin/menu.html
@@ -8,7 +8,8 @@
         <li><a href="../user/jugar.html">Jugar</a></li>
         <li><a href="../user/llistat.html">Llistat patrides</a></li>
         <li><a href="../admin/gestionar.html">Gestionar paraules</a></li>
-        <li><a href="../admin/configuracio.html">Configuració</a></li>
+        <li><a href="../admin/configuracio.html">Configuracio</a></li>
+        <li><a href="../admin/idiomes.html">Idiomes</a></li>
     </ul>
 </body>
 </html>
