--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-    <h1>Gestió de pauraules</h1>
+    <h1>Gestio de paurauless</h1>
     <form id="loginForm" method="POST">
         <label for="usuario">Usuari:</label>
         <input type="text" id="usuario" name="usuario">
@@ -11,6 +11,6 @@
         <input type="password" id="contrasenya" name="contrasenya">
         <button type="submit">Entrar</button>
     </form>
-    <script src="js/index/index.js"></script>
+    <script src="js/index/index.js" type="module"></script>
 </body>
 </html>
