--- a/src/pages/admin/configuracio.html
+++ b/src/pages/admin/configuracio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Configuración</title>
+  <title>Configuracion</title>
   <script src="../../js/admin/configuracio.js"></script>
 </head>
 <body>
-  <h1>Configuración</h1>
+  <h1>Configuracion</h1>
   
   <label>Lletres repetides:</label>
   <label>
