--- a/src/pages/admin/gestionar.html
+++ b/src/pages/admin/gestionar.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <h1>Paraula:</h1>
-  <label>Paraula en català</label>
+  <label>Paraula en catala</label>
   <input id="paraulaInput">
-  <label>Traducció:</label>
+  <label>Traduccio:</label>
   <input id="traduccioInput">
   <button id="guardarButton">Guardar</button>
 
