--- a/src/pages/user/llistat.html
+++ b/src/pages/user/llistat.html
@@ -25,7 +25,7 @@
     <tr>
       <th>Usuario</th>
       <th>Palabra</th>
-      <th>Traducción</th>
+      <th>Traduccion</th>
       <th>Tiempo</th>
       <th>Correctas</th>
       <th>Errores</th>
