--- a/src/pages/admin/gestionar.html
+++ b/src/pages/admin/gestionar.html
@@ -4,6 +4,9 @@
   <title>Guardar Palabra</title>
 </head>
 <body>
+  <a href="../../index.html">Login</a>
+  <a href="menu.html">Menu</a>
+  <a href="../user/llistat.html">Llistat patrides</a>
   <h1>Paraula:</h1>
   <label>Paraula en catala</label>
   <input id="paraulaInput">
