--- a/src/pages/admin/configuracio.html
+++ b/src/pages/admin/configuracio.html
@@ -5,6 +5,9 @@
   <script src="../../js/admin/configuracio.js"></script>
 </head>
 <body>
+  <a href="../../index.html">Login</a>
+  <a href="menu.html">Menu</a>
+  <a href="../user/llistat.html">Llistat patrides</a>
   <h1>Configuracion</h1>
   
   <label>Lletres repetides:</label>
@@ -40,9 +43,14 @@
     <input type="radio" name="opcion3" value="minuscules_majuscules"> Minuscules i Majuscules
   </label>
   <br>
-
+  <label for="mostrarTraduccion">Veure paraula traduida:</label>
+<input type="checkbox" id="mostrarTraduccion">
+<br>
+<label for="tiempoVisualizacion">Temps de visualitzacio (en segons):</label>
+<input type="number" id="tiempoVisualizacion">
+<br>
   <label for="idiomaSelect">Idioma:</label>
   <select id="idiomaSelect"></select>
-  
+
   <button onclick="guardarConfiguracion()">Guardar</button>
   </body>
