--- a/src/pages/admin/idiomes.html
+++ b/src/pages/admin/idiomes.html
@@ -4,6 +4,9 @@
   <title>Guardar Idioma</title>
 </head>
 <body>
+  <a href="../../index.html">Login</a>
+  <a href="menu.html">Menu</a>
+  <a href="../user/llistat.html">Llistat patrides</a>
   <h1>Idioma:</h1>
   <input id="idiomaInput">
   <button id="guardarButton">Guardar</button>
