--- a/src/pages/user/llistat.html
+++ b/src/pages/user/llistat.html
@@ -20,6 +20,8 @@
   </style>
 </head>
 <body>
+  <a href="../../index.html">Login</a>
+  <a href="jugar.html">Jugar</a>
   <h1>Tabla de Registros</h1>
   <table id="tabla-registros">
     <tr>
@@ -30,9 +32,11 @@
       <th>Correctas</th>
       <th>Errores</th>
       <th>Puntos</th>
+      <th>Edad</th>
+      <th>Data</th>
     </tr>
   </table>
 
-  <script src="../../js/user/llistat.js"></script>
+  <script src="../../js/user/llistat.js" type="module"></script>
 </body>
 </html>
